# flight-sim-bevy-rust

./: Cargo.toml  README.md  index.html
.github/actions/bevy-setup/: action.yml
.github/actions/cargo-cache/: action.yml
.github/workflows/: continuous_integration.yml
src/: camera.rs  hud_ui.rs  input.rs  main.rs  physics.rs  plane.rs  ui.rs  world.rs
src/plane/: build.rs  spec.rs
src/ui/: hud.rs  spec.rs
