[package]
name = "flight-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
bevy = { version = "0.10.1", features = [] }
bevy_egui = "0.20.3"
bevy_rapier3d = "0.21.0"
enterpolation = "0.2.1"
leafwing-input-manager = "0.9.2"
noise = "0.8.2"
rand = "0.8.5"

[profile.release]
opt-level = 'z'
lto = "thin"
