[package]
name = "flight-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5"
bevy = { version = "0.11", features = [] }
bevy_egui = "0.21"
bevy_rapier3d = "0.22"
enterpolation = "0.2.1"
leafwing-input-manager = "0.10"
noise = "0.8"
rand = "0.8"

[profile.release]
opt-level = 'z'
lto = "thin"
